# trusty-tools

./: .gitignore  .line-cap-allowlist.tsv  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md
crates/cto-assistant/: Cargo.toml  README.md
crates/cto-assistant/src/: lib.rs
crates/open-mpm/: .gitignore  .secrets.baseline  .trusty-search  CLAUDE.md  Cargo.toml  README.md  build.rs  help.yaml  mypy.ini
crates/open-mpm-agent-api/: Cargo.toml  README.md
crates/open-mpm-agent-api/src/: lib.rs
crates/open-mpm-local/: Cargo.toml  README.md
crates/open-mpm-local/src/: main.rs
crates/open-mpm/.open-mpm/: skill-sources.toml
crates/open-mpm/docs/: README.md
crates/open-mpm/evals/: cto-assistant.toml
crates/open-mpm/scripts/: install-wrapper.sh
crates/open-mpm/src/: build_info.rs  ctrl_session.rs  docs_index.rs  interaction_log.rs  lib.rs  main.rs  mistake_log.rs  perf.rs  process_tracker.rs  runtime.rs  session_record.rs  session_registry.rs  state_writer.rs  subprocess.rs
crates/open-mpm/tests/: api_e2e.rs  cli_project.rs
crates/open-mpm/ui/: playwright.config.ts  tailwind.config.js  vite.config.ts
crates/tc-services/: Cargo.toml  README.md
crates/tc-services/src/: cto_db.rs  granola.rs  gworkspace.rs  lib.rs
crates/trusty-agents-common/: Cargo.toml  README.md
crates/trusty-agents-common/src/: lib.rs  perf.rs  runner.rs
crates/trusty-agents-local/: Cargo.toml  README.md
crates/trusty-agents-local/src/: main.rs
crates/trusty-analyze/: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  help.yaml
crates/trusty-analyze/src/: lib.rs  main.rs
crates/trusty-analyze/tests/: stdio_harness.rs
crates/trusty-analyze/ui/: index.html  package.json  pnpm-lock.yaml  vite.config.js
crates/trusty-bm25-daemon/: CHANGELOG.md  Cargo.toml  README.md
crates/trusty-bm25-daemon/src/: batch_queue.rs  index.rs  lib.rs  main.rs  protocol.rs  server.rs  socket.rs
crates/trusty-bm25-daemon/tests/: bm25_daemon.rs
crates/trusty-code/: Cargo.toml  README.md  build.rs
crates/trusty-code/src/: build_info.rs  events.rs  lib.rs  main.rs  progress.rs
crates/trusty-common/: CHANGELOG.md  Cargo.toml  README.md
crates/trusty-common/src/: bm25.rs  bm25_client.rs  chat.rs  claude_config.rs  daemon_addr.rs  daemon_guard.rs  data_dir.rs  embed_client.rs  health_probe.rs  help.rs  launchd.rs  lib.rs  log_buffer.rs  openrouter_legacy.rs  port.rs  project_discovery.rs  server.rs  shutdown.rs  sys_metrics.rs  tracing_init.rs
crates/trusty-common/tests/: community_tests.rs  help_yaml_workspace.rs  kg_graph_tests.rs  kg_migration_tests.rs
crates/trusty-console/: Cargo.toml  README.md  build.rs
crates/trusty-console/src/: bind.rs  connector.rs  lib.rs  main.rs  mcp_handle.rs  metrics_poller.rs  poller.rs  server.rs
crates/trusty-console/ui/: index.html  package.json  pnpm-lock.yaml  vite.config.js
crates/trusty-controller/: Cargo.toml  README.md
crates/trusty-controller/src/: cli.rs  cli_tests.rs  lib.rs  main.rs  output.rs  scope.rs
crates/trusty-cto-db/: Cargo.toml  README.md
crates/trusty-cto-db/src/: lib.rs
crates/trusty-embed-daemon/: Cargo.toml  README.md
crates/trusty-embed-daemon/src/: batch_queue.rs  main.rs  protocol.rs  server.rs  socket.rs
crates/trusty-embed-daemon/tests/: embed_daemon.rs
crates/trusty-embedder/: Cargo.toml  README.md
crates/trusty-embedder-client/: CHANGELOG.md  Cargo.toml  README.md
crates/trusty-embedder-client/src/: error.rs  in_process.rs  lib.rs  remote.rs
crates/trusty-embedder/src/: lib.rs
crates/trusty-embedderd/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
crates/trusty-embedderd/src/: batch_queue.rs  lib.rs  main.rs  protocol.rs  stdio_server.rs  uds_server.rs
crates/trusty-embedderd/tests/: bit_identical.rs  concurrent_embed.rs  uds_integration.rs
crates/trusty-git-analytics/: .gitignore  .mcp.json  .secrets.baseline  .trusty-search  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Migrating-From-Gitflow-Analytics.md  README.md  clippy.toml  help.yaml  tga.md
crates/trusty-git-analytics/.claude-mpm/: AGENT_DELEGATION.md  INSTRUCTIONS.md  PM_INSTRUCTIONS.md  PM_INSTRUCTIONS_DEPLOYED.md  WORKFLOW.md  message_check_state.json  pm_skills_registry.yaml
crates/trusty-git-analytics/.github/: CODEOWNERS  pull_request_template.md
crates/trusty-git-analytics/benches/: tga_bench.rs
crates/trusty-git-analytics/configs/: example-aliases.yaml  example-config.yaml  self-analysis.yaml
crates/trusty-git-analytics/docs/: architecture.md  configuration-reference.md  developer-guide.md  migration-from-python.md  publishing.md  user-guide.md
crates/trusty-git-analytics/examples/: multi-source-config.yaml
crates/trusty-git-analytics/src/: lib.rs  main.rs
crates/trusty-git-analytics/tests/: bitbucket_live.rs  integration_test.rs
crates/trusty-gworkspace/: Cargo.toml  README.md
crates/trusty-gworkspace/src/: lib.rs  openrpc.rs  server.rs  tools.rs
crates/trusty-gworkspace/tests/: auth_models.rs
crates/trusty-mcp-core/: Cargo.toml  README.md
crates/trusty-mcp-core/src/: lib.rs  openrpc.rs  service.rs
crates/trusty-memory/: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  help.yaml
crates/trusty-memory-core/: Cargo.toml
crates/trusty-memory-core/benches/: retrieval.rs
crates/trusty-memory-core/src/: embed.rs  lib.rs
crates/trusty-memory-mcp/: Cargo.toml
crates/trusty-memory-mcp/src/: lib.rs  openrpc.rs  service.rs  tools.rs  web.rs
crates/trusty-memory/src/: activity.rs  attribution.rs  bm25_supervisor.rs  bootstrap.rs  chat.rs  cli_tests.rs  console_metrics.rs  discovery.rs  fd_metrics.rs  foreground.rs  hook_emit.rs  kg_extract.rs  lib.rs  main.rs  mcp_service.rs  messaging.rs  openrpc.rs  project_root.rs  prompt_facts.rs  prompt_log.rs  service.rs  startup_scan.rs  tools.rs  web.rs
crates/trusty-monitor-tui/: Cargo.toml
crates/trusty-mpm-cli/: Cargo.toml
crates/trusty-mpm-client/: Cargo.toml
crates/trusty-mpm-core/: Cargo.toml
crates/trusty-mpm-daemon/: Cargo.toml
(+2781 files in other folders)
