[workspace]
# Glob picks up every crate directory under `crates/`. Add a new crate by
# dropping its directory in `crates/` with its own Cargo.toml.
members = ["crates/*"]
resolver = "2"
# Exclude paths inside copied projects that contain stray manifests we don't
# want Cargo to treat as workspace members. open-mpm bundles a `weather_alerter`
# scratch dir; trusty-mpm-gui's `src-tauri` is included via its parent crate.
exclude = []

[workspace.package]
edition = "2024"
# Required for let-chains used by trusty-mpm crates (stabilized in 1.88).
rust-version = "1.88"
# Inherited by the trusty-mpm-* crates which declare `version.workspace = true`.
# Other crates set their own `version` and are unaffected.
version = "0.4.0"
# NOTE: workspace-level license preserved because several existing crates
# (trusty-common, trusty-mcp-core, trusty-mpm-core, …) reference it via
# `license.workspace = true`. Per migration instructions we must not alter
# individual crates' license fields. trusty-memory-* and a few others declare
# their own (MIT or Elastic-2.0) directly and are unaffected.
license = "Elastic-2.0"
repository = "https://github.com/bobmatnyc/trusty-tools"
authors = ["Bob Matsuoka <bob@matsuoka.com>"]

[workspace.dependencies]
# ── Internal crates (path deps so the monorepo builds without publish cycles) ──
trusty-common = { path = "crates/trusty-common", version = "0.6.1" }
# trusty-embedderd: embedding daemon — referenced by trusty-search so
# `cargo install trusty-search` produces both binaries from one command.
trusty-embedderd = { path = "crates/trusty-embedderd", version = "0.3.0" }
# trusty-bm25-daemon: per-palace BM25 lexical-index daemon — referenced by
# trusty-memory so `cargo install trusty-memory` produces both binaries from
# one command (mirrors the trusty-embedderd / trusty-search pattern, PR #190).
trusty-bm25-daemon = { path = "crates/trusty-bm25-daemon", version = "0.1.0" }
# trusty-mpm: unified crate (replaces the former trusty-mpm-{core,mcp,client,
# daemon,cli,tui,telegram} sub-crates). The gui sub-crate is kept separate
# because it owns Tauri's build.rs and tauri.conf.json.
trusty-mpm = { path = "crates/trusty-mpm", version = "0.4.0" }

# ── Async runtime / HTTP ────────────────────────────────────────────────────
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Jaro-Winkler / Levenshtein similarity helpers used by the
# `trusty_common::help` "did you mean?" suggester behind the `cli-help`
# feature. Pure-Rust, no transitive native deps.
strsim = "0.11"
# Widened to `full` so trusty-mpm + open-mpm + trusty-memory get
# process/signal/time/fs; the originally-listed feature set is a strict
# subset of `full`.
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-appender = "0.2"
fastembed = { version = "5", default-features = false }
lru = "0.12"
parking_lot = "0.12"
dirs = "5"
colored = "2"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
futures = "0.3"
futures-util = "0.3"
axum = { version = "0.8", features = ["macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.8"
libc = "0.2"

# CLI / TUI / Telegram (trusty-mpm-tui, trusty-mpm-telegram).
ratatui = "0.29"
crossterm = "0.28"
teloxide = { version = "0.13", features = ["macros"] }

# Misc utilities used across crates.
dashmap = "6"
walkdir = "2"
regex = "1"
gray_matter = "0.2"
notify = "6"
# Process / system introspection (RSS, CPU sampling for daemon /health).
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# Storage / KG / embeddings (trusty-common memory-core feature).
usearch = "2.25"
# Pure-Rust HNSW (issue #50). The `serde` feature does not exist on
# hnsw_rs 0.3 — vectors are persisted in redb (postcard-encoded) and the
# in-memory Hnsw index is rebuilt on palace open, so direct serde of the
# Hnsw struct is unnecessary.
hnsw_rs = "0.3"
# Align with trusty-memory upstream (rusqlite 0.39, bundled libsqlite3).
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.33"
tiktoken-rs = "0.5"
git2 = { version = "0.20", features = ["vendored-libgit2", "vendored-openssl"] }
kuzu = "0.9"

# Embedded assets (trusty-memory, open-mpm).
rust-embed = { version = "8", features = ["include-exclude", "interpolate-folder-path"] }
mime_guess = "2"

# OpenAPI / Swagger (utoipa 5 + axum 0.8 — see trusty-mpm-mcp).
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Testing
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

# ── trusty-analyze additional deps ────────────────────────────────────────
clap_complete = "4"
which = "6"
open = "5"
redb = "2.6"
postcard = { version = "1", features = ["alloc"] }
ndarray = "0.16"
scip = "0.7"
protobuf = "3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
hmac = "0.12"
hex = "0.4"
ort = "2.0.0-rc.10"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
# Candle: optional Metal/CPU BERT backend (issue #54). Versions match the
# pre-existing pins in `trusty-search` so both consumers resolve to a single
# version. The deps are listed here so the shared embedder in
# `trusty-common` (behind `embedder-candle`) and the `trusty-search`
# in-crate path can pull from the same workspace entry.
candle-core = { version = "0.8", default-features = false }
candle-nn = { version = "0.8", default-features = false }
candle-transformers = { version = "0.8", default-features = false }
hf-hub = { version = "0.3", default-features = false, features = ["online", "tokio"] }
http-body-util = "0.1"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25"
tree-sitter-java = "0.23"
tree-sitter-go = "0.25"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "=0.23.1"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "=0.7.0"
tree-sitter-scala = "0.24"

# ── [patch.crates-io] ──────────────────────────────────────────────────────
# trusty-search and a handful of other crates depend on trusty-common by
# version (because it was previously published from a separate repo). In the
# monorepo we want those resolves to hit the in-tree path, so patch it here.
# Cargo only honours `[patch]` tables at the workspace root.
# Note: trusty-embedder, trusty-mcp-core, and trusty-symgraph were absorbed
# into trusty-common (refactor: consolidate 5 utility crates into trusty-common).
# Their [patch] entries are no longer needed.
[patch.crates-io]
trusty-common = { path = "crates/trusty-common" }
trusty-embedderd = { path = "crates/trusty-embedderd" }
trusty-bm25-daemon = { path = "crates/trusty-bm25-daemon" }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
