[package]
name = "open-mpm-agent-api"
version = "0.1.3"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Stable agent-plugin surface (ToolExecutor, AgentPlugin, ToolResult) shared by open-mpm and external agent crates."

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
