[package]
name = "open-mpm-local"
version = "0.1.3"
edition = "2024"
publish = false
description = "Private launcher: open-mpm + local agents (cto-assistant, etc.)"
license = "Elastic-2.0"

[dependencies]
open-mpm = { path = "../open-mpm", version = "0.38.6" }
cto-assistant = { path = "../cto-assistant", version = "0.1.3" }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
