[package]
name = "open-mpm"
version = "0.38.3"
publish = false
edition = "2024"
description = "MPM orchestration platform: AI agent harness with multi-model routing, tool execution, and subprocess delegation."
license.workspace = true
repository.workspace = true
authors.workspace = true

include = [
    "src/**/*",
    "ui/dist/**/*",
    "ui/src/**/*",
    "ui/index.html",
    "ui/package.json",
    "ui/pnpm-lock.yaml",
    "ui/svelte.config.*",
    "ui/tsconfig.*",
    "ui/vite.config.*",
    "ui/tailwind.config.*",
    "ui/postcss.config.*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[dependencies]
trusty-symgraph = { path = "../trusty-symgraph", version = "0.2.2", features = ["parser"] }
trusty-memory-core = { path = "../trusty-memory-core", version = "0.1.19" }
# Why: issue #460 unified rpc.discover — host needs the ServiceDescriptor
#      trait + OpenRpcBuilder, plus the in-process MemoryMcpService and
#      SearchMcpService impls. trusty-search now aligns on tree-sitter 0.26
#      (matches trusty-symgraph) so the previous `links = "tree-sitter"`
#      single-copy conflict is resolved and we link it directly.
trusty-mcp-core = { path = "../trusty-mcp-core", version = "0.1.2" }
trusty-memory = { path = "../trusty-memory-mcp", version = "0.1.19" }
trusty-search = { path = "../trusty-search", version = "0.3.45" }
tokio = { version = "1", features = ["full"] }
async-openai = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
scraper = "0.21"
futures = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
redb = "2.6"
usearch = "2.25"
fastembed = "5.13"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
walkdir = "2.5"
notify = { version = "8", features = ["macos_fsevent"] }
notify-debouncer-mini = { version = "0.6", default-features = false, features = ["macos_fsevent"] }
fs4 = "1.0"
regex = "1"
once_cell = "1"
stop-words = "0.8"
dirs = "5"
sha2 = "0.10"
comrak = { version = "0.52", default-features = false }
serde_yml = "0.0.12"
toml_edit = "0.22"
base64 = "0.22"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
clap = { version = "4", features = ["derive"] }
backon = "1"
indexmap = { version = "2", features = ["serde"] }
rust-embed = { version = "8", features = ["include-exclude"] }
mime_guess = "2"
local-ip-address = "0.6"
hostname = "0.4"
async-stream = "0.3"
tokio-stream = "0.1"
crossterm = "0.28"
ratatui = "0.29"
strip-ansi-escapes = "0.2"
nu-ansi-term = "0.50"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = "1"
aws-types = "1"
aws-smithy-types = "1"
git2 = { version = "0.20", features = ["vendored-libgit2"] }
teloxide = { version = "0.17", features = ["macros"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
flate2 = "1"
rand = "0.8"
similar = { version = "2", features = ["text"] }
petgraph = { version = "0.8", features = ["serde-1"] }
libc = "0.2"
lru = "0.12"

# Stable plugin surface shared with external agent crates. Defined in its own
# crate (rather than in open-mpm/lib.rs) to break the open-mpm ↔ agent-plugin
# cargo cycle: both sides depend on this small lib, neither depends on the
# other through it.
#
# Why: The published `open-mpm` crate must NOT depend on `publish = false`
#      agent crates (e.g. `cto-assistant`). Private launchers like
#      `open-mpm-local` depend on both `open-mpm` and the agent crate, and
#      wire them at startup via `open_mpm::install_plugins(...)` before
#      calling `open_mpm::run()`.
open-mpm-agent-api = { path = "../open-mpm-agent-api", version = "0.1.0" }

# [patch.crates-io] moved to workspace root Cargo.toml (Cargo requires
# [patch] tables to live in the workspace root; see #460 for context).

[lib]
name = "open_mpm"
path = "src/lib.rs"

[[bin]]
name = "open-mpm"
path = "src/main.rs"

[[bin]]
name = "ompm"
path = "src/bin/ompm.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
serial_test = "3"

[lints.clippy]
doc_lazy_continuation = "allow"
