[package]
name = "trusty-agents-common"
version = "0.1.3"
publish = false
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Stable agent-plugin surface (ToolExecutor, AgentPlugin, ToolResult) shared by trusty-agents and external agent crates."

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Wave 1 (issue #862): session_registry.rs needs anyhow + chrono.
anyhow = { workspace = true }
chrono = { workspace = true }
# adapters/patterns.rs uses regex for pattern compilation.
regex = { workspace = true }

[dev-dependencies]
# session_registry tests use tempfile for isolated state-dir creation.
tempfile = { workspace = true }
# runner::tests uses #[tokio::test] for the async AgentRunner default-impl test.
tokio = { workspace = true }
