[package]
name = "trusty-agents-local"
version = "0.1.3"
edition = "2024"
publish = false
description = "Private launcher: trusty-agents + local agents (cto-assistant, etc.)"
license.workspace = true

[dependencies]
trusty-agents = { path = "../trusty-agents", version = "0.38.6" }
cto-assistant = { path = "../cto-assistant", version = "0.1.3" }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
